# rpi-spotify-matrix-display

./: .gitignore  Makefile  README.md  config.ini.example  emulator_config.json  main.py  matrix.service  pyproject.toml
player/: components.py  playback_controller.py  spotify_player.py  transitions.py
services/: lyrics_api.py  spotify_api.py
utils/: color_utils.py  lyric_utils.py
views/: crt_view.py  fullscreen_view.py  lyrics_view.py  player_view.py  standard_view.py
