[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-spotify-matrix-display"
version = "2.0.0"
description = "Raspberry Pi Spotify Matrix Display"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Kyle Johnson", email = "kyjohnson09@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "Pillow",
    "numpy",
    "requests",
    "spotipy",
    "RGBMatrixEmulator",
    "pygame",
    "librelyrics",
    "librelyrics-spotify",
    "rgbmatrix @ git+https://github.com/hzeller/rpi-rgb-led-matrix.git ; sys_platform == 'linux' and platform_machine != 'x86_64'",
]

[project.urls]
Homepage = "https://github.com/kylejohnsonkj/rpi-spotify-matrix-display"

[project.scripts]
spotify-matrix = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["views*", "player*", "services*", "utils*"]